// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadGeneExpression action Dispatches appropriately on failure 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on failure 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "error": [Error: random error!],
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionError",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on success 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on success 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "data": Object {
      "geneA": Object {
        "expression": Array [
          1,
        ],
        "mean": 1,
        "stdev": 1,
        "zScore": Array [
          0,
        ],
      },
    },
    "experimentId": "1234",
    "genes": Array [
      "geneA",
    ],
  },
  "type": "genes/expressionLoaded",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on unrun pipeline 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`loadGeneExpression action Dispatches appropriately on unrun pipeline 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "error": [Error: random error!],
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/expressionError",
}
`;

exports[`loadGeneExpression action Does not send work for already loaded expression data. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "1234",
      Object {
        "genes": Array [
          "b",
          "c",
        ],
        "name": "GeneExpression",
      },
      [Function],
      Object {
        "timeout": 60,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`loadGeneExpression action Sends work for already loaded expression data if forced to do so. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "1234",
      Object {
        "genes": Array [
          "b",
          "c",
        ],
        "name": "GeneExpression",
      },
      [Function],
      Object {
        "timeout": 60,
      },
    ],
    Array [
      "1234",
      Object {
        "genes": Array [
          "a",
          "b",
          "c",
        ],
        "name": "GeneExpression",
      },
      [Function],
      Object {
        "timeout": 60,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
